Applying patch from Vincent Lucas
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3562 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources_fr.properties
+++ b/resources/languages/impl/gui/resources_fr.properties
@@ -28,19 +28,19 @@
 about=&A propos
 accept=&Accepter
 account=compte
-accountRegistrationWizard=Assistant d'enrigistrement de compte
+accountRegistrationWizard=Assistant d'enregistrement de compte
 accounts=Comptes
 activateOnlyWhenMinimized=Activer uniquement en mode réduit
 add=&Ajouter
 addContact=&Ajouter un contact
-addContactError=Echec lors de l'ajout du contact : {0}
-addContactErrorTitle=Echec lors de l'ajout d'un contact
+addContactError=Échec lors de l'ajout du contact : {0}
+addContactErrorTitle=Échec lors de l'ajout d'un contact
 addContactExistError=Le contact {0} existe déjà dans votre liste de contact.
 addContactIdentifier=Dans le champ suivant, veuillez entrer l'identifiant du contact que vous souhaitez ajouter.
 addContactWizard=Assistant d'ajout de contact
-addGroupLocalError=Echec lors de l'ajout du groupe : {0}. Le problème est dû à un échec d'E/S lors d'une opération locale.
-addGroupNetError=Echec lors de l'ajout du groupe : {0}. Le problème est dû à un échec du réseau. Prière, de vérifier votre connection au réseau avant de réessayer.
-addGroupError=Echec lors de l'ajout du groupe : {0}.
+addGroupLocalError=Échec lors de l'ajout du groupe : {0}. Le problème est dû à un échec d'E/S lors d'une opération locale.
+addGroupNetError=Échec lors de l'ajout du groupe : {0}. Le problème est dû à un échec du réseau. Prière, de vérifier votre connection au réseau avant de réessayer.
+addGroupError=Échec lors de l'ajout du groupe : {0}.
 addGroupErrorTitle=Erreur lors de l'ajout de groupe
 addGroupExistError=Le groupe {0} existe déjà dans votre liste de contact.
 addSubcontact=&Ajouter un sous-contact
@@ -53,7 +53,7 @@ apply=&Effectuer
 at=arobase
 authAccepted=Le contact a accepté votre requête d'autorisation.
 authenticationWindowTitle=Demande d'authentification
-authRejected=Le contact a rejeté votre demande d'autorisation request.
+authRejected=Le contact a rejeté votre demande d'autorisation.
 authorizationRequested=Demande d'autorisation
 authorizationRequestedInfo=Le contact {0} demande votre autorisation.
 authenticationFailed=L'authentification a échouée pour le compte suivant : Nom d'utilisateur : {0}, Nom du serveur : {1}. Le mot de passe que vous avez fourni est incorrect.
@@ -62,7 +62,7 @@ autoPopup=Mettre la fenêtre au premier plan
 awayStatus=Absent
 back=&De retour
 ban=&Exclure
-banFailed=Echec lors de l'exclusion
+banFailed=Échec lors de l'exclusion
 banFailedGeneralError=Erreur lors de l'exclusion {0}. Une erreur au niveau du serveur est survenue.
 banFailedNotAllowed=Erreur lors de l'exclusion {0}. Le propriétaire et l'administrateur du salon ne peuvent pas être exclu.
 banFailedNotEnoughPermissions=Erreur lors de l'exclusion {0}. Vous n'avez pas les droits suffisant pour cela.
@@ -73,9 +73,9 @@ callVia=Appel via:
 callList=Liste d'appels
 cancel=&Annuler
 chatRoomAlreadyJoined=Vous avez déjà rejoint le salon {0}.
-chatRoomConfiguration=Confiuration du salon {0}
-chatRoomOpenConfigFailed=Echec lors de l'obtention de la configuration du salon {0}.
-chatRoomOpenConfigForbidden=Echec lors de l'obtention de la configuration du salon {0}. Seuls les administrateurs du salon peuvent voir et modifier la configuration.
+chatRoomConfiguration=Configuration du salon {0}
+chatRoomOpenConfigFailed=Échec lors de l'obtention de la configuration du salon {0}.
+chatRoomOpenConfigForbidden=Échec lors de l'obtention de la configuration du salon {0}. Seuls les administrateurs du salon peuvent voir et modifier la configuration.
 chatRoomConfigFormSubmitFailed=Erreur lors de la mise à jour de la configuration du salon {0}.
 chatRoomUserJoined=a rejoint {0}
 chatRoomUserLeft=est parti de {0}
@@ -83,7 +83,7 @@ chatRoomUserKicked=a été banni de {0}
 chatRoomUserQuit=a quitté {0}
 chatRoomName=Nom du salon
 chatRoomNameInfo=Dans le champ suivant, veuillez entrer le nom du salon que vous souhaitez créer.
-chatRoomNotExist=Le salon {0} est introuvable sur le serveur {1}. Prière de vérifier la validiter du nom que vous avez saisi.
+chatRoomNotExist=Le salon {0} est introuvable sur le serveur {1}. Prière de vérifier la validité du nom que vous avez saisi.
 chatRoomNotConnected=Vous devez vous connecter pour rejoindre le salon {0}.
 chatRoomNotJoined=Vous devez d'abord rejoindre un salon pour effectuer cette opération.
 chatRoomOptions=Options du salon
@@ -92,15 +92,15 @@ chatRoomRequiresPassword=Le salon {0} nécessite un mot de passe.
 chatRooms=Salons
 chatRoomSubjectChanged={0} a changé le sujet à {1}
 close=F&ermer
-closeChatAfterNewMsg=Vous avez reçu un message il y a moins de 2 secondes. Etes-vous sûr de vouloir fermer cette conversation ?
+closeChatAfterNewMsg=Vous avez reçu un message il y a moins de 2 secondes. Êtes-vous sûr de vouloir fermer cette conversation ?
 conference=Conférence
 configure=&Configurer
 configuration=Configuration
-connectionFailed=Echec de connection
-connectionFailedMessage=Echec de connection pour le compte : Nom d'utilisateur : {0}, Nom du serveur : {1}.
-connectionExpiredMessage=Vous avez été disconnecté du serveur {0}.
+connectionFailed=Échec de connection
+connectionFailedMessage=Échec de connection pour le compte : Nom d'utilisateur : {0}, Nom du serveur : {1}.
+connectionExpiredMessage=Vous avez été déconnecte du serveur {0}.
 contactAddress=Adresse du contact
-contactNotSupportingTelephony=Le contact choisit {0} ne supprote pas la téléphonie.
+contactNotSupportingTelephony=Le contact choisit {0} ne supporte pas la téléphonie.
 contactPausedTyping={0} s'est arrêté d'écrire le message
 contactTyping={0} est en train d'écrire un message
 contactTypingStateStale=L'état de la saisie ne peut pas être mise à jour
@@ -110,8 +110,8 @@ copy=&Copier
 copyLink=Copier le l'&adresse
 create=C&réer
 createChatRoom=&Créer un salon...
-createChatRoomNotSupported=Echec lors de la création du salon : {0}. Le serveur {1} ne supporte pas cette opération.
-createChatRoomError=Echec lors dela création du salon : {0}.
+createChatRoomNotSupported=Échec lors de la création du salon : {0}. Le serveur {1} ne supporte pas cette opération.
+createChatRoomError=Échec lors de la création du salon : {0}.
 createChatRoomWizard=Assistant de création de salon
 createGroup=&Créer un groupe
 createGroupName=Veiller saisir dans le champ suivant le nom du groupe que vous désirer créer.
@@ -126,7 +126,7 @@ doNotAskAgain=Ne plus redemander
 doNotShowAgain=Ne plus afficher ce message
 dontSupportWebInfo=Ce contact ne dispose pas d'informations sur le web.
 duration=Durée
-edit=&Editer
+edit=&Éditer
 emptyHistory=&Vider l'historique
 enableNotifications=Activer les notifications
 enableTypingNotifications=Activer les notifications de &saisie.
@@ -137,11 +137,11 @@ general=Général
 generalError=Erreur générale
 group=Groupe
 groupName=Nom de groupe
-failedToCreateChatRoom=Echec lors de la création du salon : {0}.
-failedToJoinChatRoom=Echec, impossible de rejoindre le salon : {0}.
+failedToCreateChatRoom=Échec lors de la création du salon : {0}.
+failedToJoinChatRoom=Échec, impossible de rejoindre le salon : {0}.
 ffcStatus=Disponible pour discuter
 file=&Fichier
-findChatRoomError=Echec pour trouver le salon "{0}".
+findChatRoomError=Échec pour trouver le salon "{0}".
 finish=&Terminer
 first=Premier
 font=Police
@@ -149,7 +149,7 @@ haveToBeConnectedToJoin=Vous devez être connecté avant de pouvoir rejoindre un
 haveToBeConnectedToLeave=Vous devez être connecté pour pouvoir quitter un salon.
 help=?
 hideCallPanel=&Masquer la zone d'appels
-hideMainWindow=Cliquer sur le boutton X ne quittera pas l'application, mais la masquera seulement. Utilisez "Fichier/Quitter" si vous souhaitez quitter l'application.
+hideMainWindow=Cliquer sur le bouton X ne quittera pas l'application, mais la masquera seulement. Utilisez "Fichier/Quitter" si vous souhaitez quitter l'application.
 history=&Historique
 historyContact=Historique - {0}
 hour=Heure
@@ -170,19 +170,19 @@ joinChatRoomTitle=Rejoindre le salon
 joinChatRoomName=Prière d'entrer le nom du salon que vous souhaitez rejoindre.
 joinChatRoomWizard=Assistant pour rejoindre un salon
 kick=&Exclure
-kickFailed=Echec de la tentative d'exclusion
-kickFailedGeneralError=Echec de la tentative d'exclusion {0}. Une erreur au niveau du serveur est survenue.
-kickFailedNotAllowed=Echec de la tentative d'exclusion {0}. Le propriétaire et l'administrateur du salon ne peuvent être exclu.
-kickFailedNotEnoughPermissions=Echec de la tentative d'exclusion {0}. Vous n'avez pas assez de privilèges pour cela.
+kickFailed=Échec de la tentative d'exclusion
+kickFailedGeneralError=Échec de la tentative d'exclusion {0}. Une erreur au niveau du serveur est survenue.
+kickFailedNotAllowed=Échec de la tentative d'exclusion {0}. Le propriétaire et l'administrateur du salon ne peuvent être exclu.
+kickFailedNotEnoughPermissions=Échec de la tentative d'exclusion {0}. Vous n'avez pas assez de privilèges pour cela.
 last=Dernier
-launchBrowserError=Echec de la tentative de démarrage du navigateur web.
+launchBrowserError=Échec de la tentative de démarrage du navigateur web.
 launchOnStartUp=Lancer au démarrage
 leave=&Quitter
 limitReachedForIp=Votre adresse IP est déjà enregistrée de trop nombreuses fois et le serveur {0} ne permet pas d'en avoir plus.
 login=&Identifiant
 loginNotSucceeded=Une erreur est survenue pendant la connexion avec le compte suivant : Nom d'utilisateur : {0}, Nom du serveur : {1}.
 loginWindowTitle=Connexion à {0}
-logoffNotSucceeded=Une erreur est survenue lors de la déconexion avec le compte suivant : Nom d'utilisateur : {0}, Nom du seveur : {1}.
+logoffNotSucceeded=Une erreur est survenue lors de la déconnexion avec le compte suivant : Nom d'utilisateur : {0}, Nom du serveur : {1}.
 me=moi
 modify=&Modifier
 moveSubcontactMsg=Sélectionnez un contact où déplacer le contact choisi.
@@ -198,19 +198,19 @@ msgReceived={0} vous a envoyé un message
 msgSendConnectionProblem=Vous devez être connecté pour pouvoir envoyer des messages.
 multipleLogins=Vous vous êtes connecté plus d'une fois avec le compte suivant : Nom d'utilisateur : {0}, Nom du serveur : {1} est actuellement déconnecté.
 name=Nom
-networkFailure=Echec au niveau réseau
+networkFailure=Échec au niveau réseau
 next=&Suivant
 new=&Nouveau
 newAccount=&Nouveau compte
 newMessage=Nouveau message...
 newName=Nouveau nom :
-newStatusMessage=Nouveau message de status
+newStatusMessage=Nouveau message de statut
 no=Non
 noAccountFound=Pour utiliser SIP-Communicator, vous devez au moins configurer un compte. Les pages suivantes vous guiderons pour en configurer un.
 noAvailableRooms=La liste des salons de ce serveur n'est pas accessible pour le moment.
-noMessage=Auncun message
+noMessage=Aucun message
 noMultiChatAccountAvailable=Aucun de vos comptes ne permet l'accès et l'utilisation de salon de discussion. Pour plus d'informations sur les protocoles supportant les salons de discussion, reportez vous à l'adresse suivante : sip-communicator.org.
-nonEmptyChatWindowClose=Vous venez de demander la fermeture d'une fenêtre de discussion avec un message non-envoyé. Etes-vous certain de vouloir fermer cette fenêtre ?
+nonEmptyChatWindowClose=Vous venez de demander la fermeture d'une fenêtre de discussion avec un message non-envoyé. Étes-vous certain de vouloir fermer cette fenêtre ?
 nonExistingUserId=Le serveur {0} ne supporte pas l'identifiant de compte utilisé.
 notifications=Notifications
 ok=&Ok
@@ -235,21 +235,21 @@ reject=&Rejeter
 rememberPassword=Mémoriser le mot de passe
 remove=&Supprimer
 removeAccount=&Supprimer le compte
-removeAccountMessage=Etes-vous certain de vouloir supprimer ce compte ?
+removeAccountMessage=Êtes-vous certain de vouloir supprimer ce compte ?
 removeContact=&Supprimer le sous-contact
-removeContactText=<DIV>Etes-vous certain de vouloir supprimer <b> {0} </b><br>de votre liste de contact?</DIV>
+removeContactText=<DIV>Êtes-vous certain de vouloir supprimer <b> {0} </b><br>de votre liste de contact?</DIV>
 removeGroup=&Supprimer le groupe
 rename=&Renommer
 renameContact=Re&nnomer le contact
 renameContactWizard=Dans le champ suivant, vous pouvez saisir le nom de contact que vous souhaitez utiliser.
 renameGroup=Re&nnomer le groupe
-renameGroupInfo=Dans le champ suivant, vous pouvez ssaisir le nom de groupe que vous souhaitez utiliser.
+renameGroupInfo=Dans le champ suivant, vous pouvez saisir le nom de groupe que vous souhaitez utiliser.
 request=&Demander
 requestAuthorization=&Demande d'autorisation
 requestAuthorizationInfo=Impossible d'ajouter {0} à votre liste de contacts. {0} doit vous autoriser votre demande pour l'ajouter. Merci d'entrer votre demande ci-dessous.
 requestAuthReason=Raison de la demande
 requestAuthReasonEnter=Entrer la raison de votre demande
-responseAuthReasonEnter=Entrer la rainson de votre réponse
+responseAuthReasonEnter=Entrer la raison de votre réponse
 rootGroup=Racine du groupe
 save=&Sauvegarder
 search=&Rechercher
@@ -271,18 +271,18 @@ selectContactSupportingInfo=Aucune information n'est disponible pour ce contact.
 sendMessage=&Envoyer un message
 sendAsSms=Envoyer tel un SMS
 sendSms=E&nvoyer un SMS
-sendSmsNotSupported=Le protocole que vous avez sélectionné ne permet pas l'envois de SMS.
+sendSmsNotSupported=Le protocole que vous avez sélectionné ne permet pas l'envoi de SMS.
 sendVia=Envoyer via
-setStatusMessage=Définir le status du message
-settings=&Paramêtres
+setStatusMessage=Définir le statut du message
+settings=&Paramètres
 showCallPanel=Afficher la zone d'appels
 showChannelsList=Afficher la liste des canaux
 showOfflineUsers=Masquer/Afficher les utilisateurs "déconnectés"
 specifyReason=Dans le champ suivant, vous pouvez saisir la raison de cette opération.
 soundOnOff=Activer/Désactiver le son
 statusChangedChatMessage=est devenu {0}
-statusChangeGeneralError=Echec lors du changement de status pour le compte : Nom d'utilisateur : {0}, Nom du serveur : {1}.
-statusChangeNetworkFailure=Echec lors du changement de status pour le compte : Nom d'utilisateur : {0}, Nom du serveur : {1}, survenue à cause d'un problème au niveau réseau.
+statusChangeGeneralError=Échec lors du changement de statut pour le compte : Nom d'utilisateur : {0}, Nom du serveur : {1}.
+statusChangeNetworkFailure=Échec lors du changement de statut pour le compte : Nom d'utilisateur : {0}, Nom du serveur : {1}, survenue à cause d'un problème au niveau réseau.
 statusMessageInfo=Dans le champ suivant, vous pouvez saisir le nouveau message que vous souhaitez utiliser.
 subject=Sujet
 summary=Sommaire
@@ -290,7 +290,7 @@ today=Aujourd'hui
 tools=&Outils
 typeYourRequest=Saisissez ici votre demande
 uin=UIN:
-unknown=Utilisatuer inconnu
+unknown=Utilisateur inconnu
 useCtrlEnterToSend=Utilisez Ctrl-&Enter pour envoyer
 msgDeliveryFailedUnknownError=Une erreur inconnue est survenue pendant l'envoi de votre message.
 unregisteredMessage=Impossible de se connecter avec le compte : Nom d'utilisateur : {0}, Nom du serveur : {1}. Vous êtes actuellement "déconnecté".
