Keep alive example text changed.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3565 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/plugin/sipaccregwizz/resources.properties
+++ b/resources/languages/plugin/sipaccregwizz/resources.properties
@@ -24,6 +24,6 @@ summary=Summary
 keepAlive=Keep alive
 keepAliveMethod=Keep alive method
 keepAliveInterval=Keep alive interval
-keepAliveIntervalEx=Decimal between 1 and 3600
+keepAliveIntervalEx=Between 1 and 3600 seconds
 register=REGISTER
 options=OPTIONS
