"UIN" replaced by identifier or user identifier
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3612 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -300,7 +300,7 @@ summary=Summary
 today=Today
 tools=&Tools
 typeYourRequest=Type your request here
-uin=UIN:
+uin=User identifier:
 unknown=Unknown user
 useCtrlEnterToSend=Use Ctrl-&Enter to send
 msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
