--- a/resources/languages/impl/gui/resources_de.properties
+++ b/resources/languages/impl/gui/resources_de.properties
@@ -279,7 +279,7 @@ summary=Zusammenfassung
 today=Heute
 tools=&Werkzeuge
 typeYourRequest=Schreiben Sie Ihre Anfrage hier
-uin=UIN:
+uin=User identifier:
 unknown=Benutzer unbekannt
 useCtrlEnterToSend=Benutze Ctrl-&Enter zum senden
 msgDeliveryFailedUnknownError=Unbekannter Fehler beim Zustellen der Nachricht.
