--- a/resources/languages/impl/gui/resources_fr.properties
+++ b/resources/languages/impl/gui/resources_fr.properties
@@ -289,7 +289,7 @@ summary=Sommaire
 today=Aujourd'hui
 tools=&Outils
 typeYourRequest=Saisissez ici votre demande
-uin=UIN:
+uin=Identificateur:
 unknown=Utilisateur inconnu
 useCtrlEnterToSend=Utilisez Ctrl-&Enter pour envoyer
 msgDeliveryFailedUnknownError=Une erreur inconnue est survenue pendant l'envoi de votre message.
