--- a/resources/languages/impl/gui/resources_it.properties
+++ b/resources/languages/impl/gui/resources_it.properties
@@ -285,7 +285,7 @@ summary=Sommario
 today=Oggi
 tools=&Strumenti
 typeYourRequest=Inserisci la richiesta qui
-uin=UIN:
+uin=User identifier:
 unknown=Utente sconosciuto
 useCtrlEnterToSend=Premi Ctrl-&Enter per inviare
 msgDeliveryFailedUnknownError=Impossibile consegnare il messaggio. Errore sconosciuto.
