--- a/resources/languages/impl/gui/resources_ro.properties
+++ b/resources/languages/impl/gui/resources_ro.properties
@@ -269,7 +269,7 @@ summary=Sumar
 today=Astăzi
 tools=&Unelte
 typeYourRequest=Introduceți aici cererea dvs.
-uin=UIN:
+uin=User identifier:
 unknown=Utilizator necunoscut
 useCtrlEnterToSend=Utilizează Ctrl-&Enter pentru trimitere
 msgDeliveryFailedUnknownError=O eroare necunoscută a intervenit în timpul trimiterii mesajului dvs.
