--- a/resources/languages/impl/gui/resources_zh_CN.properties
+++ b/resources/languages/impl/gui/resources_zh_CN.properties
@@ -277,7 +277,7 @@ summary=概要
 today=今天
 tools=&工具
 typeYourRequest=请在这里输入您的请求
-uin=UIN(ICQ 号):
+uin=User identifier:
 unknown=未知用户
 useCtrlEnterToSend=使用组合键 Ctrl-&Enter 发送消息
 msgDeliveryFailedUnknownError=发送消息失败, 未知错误.
