--- a/resources/languages/plugin/aimaccregwizz/resources.properties
+++ b/resources/languages/plugin/aimaccregwizz/resources.properties
@@ -1,6 +1,6 @@
 protocolName=AIM
 protocolDescription=The AIM service protocol
-uin=AIM Screenname:
+id=AIM Screenname:
 password=Password:
 rememberPassword=Remember password
 uinAndPassword=UIN and Password
