--- a/resources/languages/plugin/icqaccregwizz/resources.properties
+++ b/resources/languages/plugin/icqaccregwizz/resources.properties
@@ -1,6 +1,6 @@
 protocolName=ICQ
 protocolDescription=The AOL ICQ service protocol
-uin=ICQ UIN:
+uin=ICQ Number:
 password=Password:
 rememberPassword=Remember password
 uinAndPassword=UIN and Password
