--- a/resources/languages/plugin/msnaccregwizz/resources.properties
+++ b/resources/languages/plugin/msnaccregwizz/resources.properties
@@ -1,6 +1,6 @@
 protocolName=MSN
 protocolDescription=A protocol to connect and chat on the  MSN Service.
-uin=Email:
+id=Email:
 password=Password:
 rememberPassword=Remember password
 uinAndPassword=ID and Password
