--- a/resources/languages/plugin/yahooaccregwizz/resources.properties
+++ b/resources/languages/plugin/yahooaccregwizz/resources.properties
@@ -1,6 +1,6 @@
 protocolName=YAHOO
 protocolDescription=A protocol to connect and chat on the  Yahoo Service.
-uin=Username:
+id=Username:
 password=Password:
 rememberPassword=Remember password
 uinAndPassword=ID and Password
