- user asked for confirmation when moving contact using the drag&drop - popup menu returned to lightweight - try to solve several problems on Mac (flicker problem, drop down selection problem) - info button enhancements - resizing issues
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3619 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -193,9 +193,11 @@ loginWindowTitle=Login {0}
 logoffNotSucceeded=An error occured while logging off with the following account: User name: {0}, Server name: {1}.
 me=me
 modify=&Modify
+move=Move
 moveSubcontactMsg=Select the contact, where you would like to move.
-moveSubcontact=M&ove Subcontact
+moveSubcontact=M&ove contact
 moveSubcontactInSameContact=The contact you have choosen is the same as \n the source one. Please choose another contact!
+moveSubcontactQuestion=<DIV>Are you sure you want to move <B> {0} </B> to <B> {1} </B> ?</DIV>
 moveToGroup=&Move to group
 moveContactError=&Contact cannot be moved
 msgDeliveryFailure=The above message could not be delivered
