- Tool tip added to Call and Hang up buttons - Fix userInfo tooltip (replaced by Contact info)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3620 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -146,6 +146,7 @@ findChatRoomError=Failed to find the "{0}" chat room.
 finish=&Finish
 first=First
 font=Font
+hangUp=Hang up
 haveToBeConnectedToJoin=You have to be connected in order to join a chat room. Please connect and then try again.
 haveToBeConnectedToLeave=You have to be connected in order to leave a chat room.
 help=?
