--- a/resources/languages/impl/gui/resources_de.properties
+++ b/resources/languages/impl/gui/resources_de.properties
@@ -16,7 +16,7 @@ addContact=Kontakt &hinzufügen
 addContactError=Kann Kontakt mit id {0} nicht hinzufügen
 addContactErrorTitle=Fehler beim Kontakthinzufügen
 addContactExistError=Der Kontakt {0} existierte bereits
-addContactIdentifier=Geben Sie den Identifier des Kontaktes, den Sie hinzufügen wollen, in das Feld unten ein
+addContactIdentifier=Geben Sie die Informationen des Kontaktes, den Sie hinzufügen wollen, in das Feld unten ein
 addContactWizard=Kontakt hinzufügen...
 addGroupLocalError=Kann Gruppe "{0}" nicht hinzufügen. Das Problem ist bei einer lokalen Lese/Schreiboperation aufgetreten. (Festplatte voll? Fehlende Rechte?)
 addGroupNetError=Kann Gruppe "{0}" nicht hinzufügen. Überprüfen Sie Ihre Netzwerkverbindung und versuchen Sie es erneut.
@@ -175,6 +175,7 @@ modify=&Ändern
 moveSubcontactMsg=Wählen Sie den Kontakt aus, den Sie verschieben wollen.
 moveSubcontact=&Verschiebe Unterkontakt.
 moveSubcontactInSameContact=Der Zielkontakt ist der selbe wie der Ausgangskontakt. Wählen Sie einen anderen aus!
+moveSubcontactQuestion=<DIV>Sind Sie sicher, dass sie <B> {0} </B> in <B> {1} </B> verschieben wollen?</DIV>
 moveToGroup=&Verschiebe in Gruppe
 moveContactError=&Kontakt kann nicht verschoben werden
 msgDeliveryFailure=Diese Nachricht konnte nicht zugestellt werden.
