New simplified sign in form shown when the application is started for the first time.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3654 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -224,7 +224,7 @@ newMessage=New message...
 newName=New name:
 newStatusMessage=New status message
 no=No
-noAccountFound=In order to use the SIP-Communicator you need at least one registered account. The following pages will guide you through the process of creating an account.
+initialAccountRegistration=Configure all your favorite protocols in one click.
 noAvailableRooms=The list of rooms for this server is currently not available.
 noMessage=No message
 noMultiChatAccountAvailable=No accounts, supporting multi user chat found. Check sip-communicator.org for more information on which protocols support multi user chat.
@@ -298,6 +298,7 @@ showCallPanel=Show call panel
 showChannelsList=Show channels list
 showOffline=Show
 showOfflineContacts=Show inactive contacts
+signin=Sign in
 smiley=Smiley
 specifyReason=In the field below you could specify the reason of this operation.
 sound=Sound
