--- a/resources/languages/plugin/jabberaccregwizz/resources.properties
+++ b/resources/languages/plugin/jabberaccregwizz/resources.properties
@@ -1,6 +1,5 @@
-protocolName=Jabber
+protocolName=JABBER
 protocolDescription=The Jabber protocol
-userID=Jabber id
 username=Jabber username
 password=Password
 password2=Confirm password
@@ -11,7 +10,7 @@ ovverideServerOps=Override server default options
 cserver=Server
 server=Connect Server
 port=Port
-sendKeepAlive=Send keep alive packets
+enableKeepAlive=Enable keep alive
 existingAccount=* The account you entered is already installed.
 newAccountTitle=Jabber new account registration
 registerNewAccount=Register new account
@@ -23,6 +22,8 @@ cancelLabel=C&ancel
 chooseLabel=&Choose
 serverColumn=Server
 commentColumn=Comment
+resource=Resource
+priority=Priority
 
 xmppError=XMPP Error
 userExist=This user already exist on this server. Choose another user or server.
