--- a/resources/languages/plugin/sipaccregwizz/resources.properties
+++ b/resources/languages/plugin/sipaccregwizz/resources.properties
@@ -1,6 +1,6 @@
 protocolName=SIP
 protocolDescription=The SIP protocol
-uin=SIP id
+id=SIP id
 password=Password
 rememberPassword=Remember password
 uinAndPassword=User name and password
