Configurable wizard "Finish" button. Account registration wizards have now a "Sign in" button.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3683 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/plugin/jabberaccregwizz/resources.properties
+++ b/resources/languages/plugin/jabberaccregwizz/resources.properties
@@ -31,3 +31,4 @@ unknownXmppError=Unknown XMPP error. Verify that the server name is correct.
 notSamePassword=The two entered password aren't the same.
 
 error=Error
+signin=Sign in
