--- a/resources/languages/plugin/rssaccregwizz/resources.properties
+++ b/resources/languages/plugin/rssaccregwizz/resources.properties
@@ -7,3 +7,4 @@ Note that you could have only one RSS account!\n\n\
 You can add RSS feeds to your contact list using the "Add contact" wizard. Fill in the contact address field with the URI of the RSS feed you would like to add.
 rssAccountInfoTitle=RSS Account Information
 rssAccountAttention=Please read attentively the information provided below!
+activate=Activate
