--- a/resources/languages/plugin/sipaccregwizz/resources.properties
+++ b/resources/languages/plugin/sipaccregwizz/resources.properties
@@ -27,3 +27,4 @@ keepAliveInterval=Keep alive interval
 keepAliveIntervalEx=Between 1 and 3600 seconds
 register=REGISTER
 options=OPTIONS
+signin=Sign in
