--- a/resources/languages/plugin/sshaccregwizz/resources.properties
+++ b/resources/languages/plugin/sshaccregwizz/resources.properties
@@ -5,3 +5,4 @@ identityFile=Identitity File:
 knownHosts=Known Hosts:
 accountDetails=SSH Account Details
 existingAccount=* The account you entered is already installed.
+signin=Sign in
