--- a/resources/languages/plugin/zeroconfaccregwizz/resources.properties
+++ b/resources/languages/plugin/zeroconfaccregwizz/resources.properties
@@ -7,3 +7,4 @@ rememberPassword=Remember password
 userAndPassword=Identification
 existingAccount=* A Bonjour account already exists. You can only install a single Bonjour account.
 error=Error
+signin=Sign in
