--- a/resources/languages/plugin/gibberishaccregwizz/resources.properties
+++ b/resources/languages/plugin/gibberishaccregwizz/resources.properties
@@ -6,3 +6,4 @@ rememberPassword=Remember password
 userAndPassword=Identification
 existingAccount=* The account you entered is already installed.
 error=Error
+signin=Sign in
