--- a/resources/languages/plugin/yahooaccregwizz/resources.properties
+++ b/resources/languages/plugin/yahooaccregwizz/resources.properties
@@ -6,3 +6,4 @@ rememberPassword=Remember password
 uinAndPassword=ID and Password
 existingAccount=* The account you entered is already installed.
 error=Error
+signin=Sign in
