Fix the Add contact wizard providers page text.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3710 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -281,7 +281,7 @@ selectGroup=Select group
 selectGroupWizard=The list below contains all groups in your Contact List. Select the one, where you would like to add the new contact.
 selectGroupWizardTitle=Specify group
 selectProvidersForChatRoom=The list below contains all accounts that support the multi user chat feature. Select the one you would like to use to create your chat room.
-selectProvidersWizard=The list below contains all registered accounts. Select these one you would like to use to communicate with the new contact.
+selectProvidersWizard=The list below contains all registered accounts. Select the one you would like to use to communicate with the new contact.
 selectProvidersWizardTitle=Select account(s)
 send=&Send
 sendFile=Send &file
