Storing the last selected group name on adding new contact and when adding new contacts the last selected group is used in the wizard.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3716 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -43,6 +43,7 @@ addGroupNetError=Failed to add group with name: {0}. The problem occured due to 
 addGroupError=Failed to add group with name: {0}.
 addGroupErrorTitle=Add group Error
 addGroupExistError=The group {0} already exists in your contact list.
+addGroup=Create group
 addSubcontact=&Add subcontact
 all=&All
 allContacts=&All contacts
