Some strings related to the sms functionality.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3756 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -136,6 +136,7 @@ edit=&Edit
 emptyHistory=&Empty history
 enableNotifications=Enable notifications
 enableTypingNotifications=Enable &typing notifications
+enterPhoneNumber=Enter phone number
 error=Error
 exit=E&xit
 extendedCriteria=Extended criteria
@@ -290,6 +291,8 @@ selectContactSupportingInfo=There is no info for this contact.
 sendMessage=&Send a message
 sendAsSms=Send as SMS
 sendSms=S&end SMS
+sendSmsDetails=Remember that you need to enter the number in international\
+format i.e. starting with +44 for the UK for example, +447777000000
 sendSmsNotSupported=The protocol you have selected doesn't support SMS messages.
 sendVia=Send via
 setStatusMessage=Set status message
