Change systray icons according to global status.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3757 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/systray/resources.properties
+++ b/resources/languages/impl/systray/resources.properties
@@ -4,7 +4,13 @@
 # See terms of license at gnu.org.
 
 trayIcon=resources/images/impl/systray/systrayIcon.png
+trayIconOffline=resources/images/impl/systray/systrayIconOffline.png
+trayIconAway=resources/images/impl/systray/systrayIconAway.png
+trayIconFFC=resources/images/impl/systray/systrayIconFFC.png
 trayIconWindows=resources/images/impl/systray/systrayIconWindows.png
+trayIconWindowsOffline=resources/images/impl/systray/systrayIconWindowsOffline.png
+trayIconWindowsAway=resources/images/impl/systray/systrayIconWindowsAway.png
+trayIconWindowsFFC=resources/images/impl/systray/systrayIconWindowsFFC.png
 trayIconMacOSX=resources/images/impl/systray/systrayIconMacOSX.png
 trayIconMacOSXWhite=resources/images/impl/systray/systrayIconMacOSXWhite.png
 addContactIcon=resources/images/impl/gui/buttons/addContactIcon.png
