Changing of Dock Icon according to global status and changing systray changing to avoid errors if icons are missing.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3780 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/systray/resources.properties
+++ b/resources/languages/impl/systray/resources.properties
@@ -13,6 +13,9 @@ trayIconWindowsAway=resources/images/impl/systray/systrayIconWindowsAway.png
 trayIconWindowsFFC=resources/images/impl/systray/systrayIconWindowsFFC.png
 trayIconMacOSX=resources/images/impl/systray/systrayIconMacOSX.png
 trayIconMacOSXWhite=resources/images/impl/systray/systrayIconMacOSXWhite.png
+dockIconOffline=resources/images/impl/systray/dock-offline.png
+dockIconAway=resources/images/impl/systray/dock-away.png
+dockIconFFC=resources/images/impl/systray/dock-chatty.png
 addContactIcon=resources/images/impl/gui/buttons/addContactIcon.png
 statusMenuIcon=resources/images/impl/systray/statusIcon.png
 settingsMenuIcon=resources/images/impl/gui/buttons/configureIcon.png
