fix sms send from the chat panel.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3792 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -213,7 +213,8 @@ moveContactError=&Contact cannot be moved
 msgDeliveryFailure=The above message could not be delivered
 msgDeliveryOfflineNotSupported=The protocol you are using doesn't support offline messages. You could try to reach this contact through another protocol or wait until he/she becomes online.
 msgDeliveryInternalError=An internal error occured. This is most probably a bug. Please report it here: http://www.sip-communicator.org/index.php/Development/BugsAndIssues
-msgNotDelivered=A network problem occured.
+msgDeliveryUnknownError=Your message could not be delivered due to the following problem: {0}.
+msgNotDelivered=A network problem occured. Please check your network configuration and try again.
 msgReceived={0} has sent you a message
 msgSendConnectionProblem=You should be connected to be able to send messages.
 multipleLogins=You have logged in more than once with the same account. The following account: User name: {0}, Server name: {1} is currently disconnected.
@@ -291,8 +292,8 @@ selectContactSupportingInfo=There is no info for this contact.
 sendMessage=&Send a message
 sendAsSms=Send as SMS
 sendSms=S&end SMS
-sendSmsDetails=Remember that you need to enter the number in international\
-format i.e. starting with +44 for the UK for example, +447777000000
+sendSmsDetails=Remember that you need to enter the number in international \
+format e.g. starting with +44 for the UK for example, +447777000000
 sendSmsNotSupported=The protocol you have selected doesn't support SMS messages.
 sendVia=Send via
 setStatusMessage=Set status message
