Some new SMS related error messages.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3803 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -45,6 +45,7 @@ addGroupErrorTitle=Add group Error
 addGroupExistError=The group {0} already exists in your contact list.
 addGroup=Create group
 addSubcontact=&Add subcontact
+advanced=Advanced
 all=&All
 allContacts=&All contacts
 alwaysOnTop=Always on top
@@ -219,10 +220,11 @@ msgReceived={0} has sent you a message
 msgSendConnectionProblem=You should be connected to be able to send messages.
 multipleLogins=You have logged in more than once with the same account. The following account: User name: {0}, Server name: {1} is currently disconnected.
 name=Name
+network=Network
 networkFailure=Network failure
 next=&Next
 new=&New
-newAccount=&New account
+newAccount=Add &new account
 newMessage=New message...
 newName=New name:
 newStatusMessage=New status message
@@ -239,7 +241,7 @@ olderCalls=Older calls
 online=Online
 openInBrowser=Open in &browser
 options=Options
-passwd=Password:
+passwd=Password
 paste=&Paste
 previous=Previous
 print=&Print
@@ -304,6 +306,8 @@ showOffline=Show
 showOfflineContacts=Show inactive contacts
 signin=Sign in
 smiley=Smiley
+smsSuccessfullySent=SMS message successfully sent!
+smsSendConnectionProblem=You need to be connected before being able to send SMS messages. Please connect your SMS provider account.
 specifyReason=In the field below you could specify the reason of this operation.
 sound=Sound
 soundOnOff=Turn sound on/off
@@ -319,6 +323,7 @@ typeYourRequest=Type your request here
 uin=User identifier:
 unknown=Unknown user
 useCtrlEnterToSend=Use Ctrl-&Enter to send
+username=Username
 msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
 unregisteredMessage=Unable to connect the following account: User name: {0}, Server name: {1}. You are currently offline.
 updateAutomatically=Automatically install new updates
